--- a/templates/main.html
+++ b/templates/main.html
@@ -27,6 +27,7 @@
 }
 </style>
 <body style="background-color: #bed2b7;">
+    <p style="font-size: 100; font-family: chinese_font;text-align: center; color: #52584e;"><b>今日番剧</b></p>
     {% for each in data1 %}
         <div style="background-color: #f7ede3;height: 600; width: 1160; margin-top: 20; margin-bottom: 40; margin-left: 20; margin-right: 20">
             {% if loop.index % 2 == 1 %}
