--- a/templates/main.html
+++ b/templates/main.html
@@ -23,6 +23,7 @@
 		.title {
 			font-size: 100px;
 			font-family: chinese_font;
+			font-weight:bold;
 			text-align: center;
 			color: #52584e;
 			padding: 20px 0;
@@ -59,6 +60,7 @@
 		.text-title {
 			font-size: 55px;
 			font-family: chinese_font;
+			font-weight:bold;
 			text-align: center;
 			color: #52584e;
 			margin-bottom: 25px;
